syntax = "proto3";

package protogen;

import "apis/protogen/hello.proto";

option go_package = "./protogen";

service HelloController {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

